[gd_scene load_steps=7 format=3 uid="uid://bs4ei7k4cgooc"]

[ext_resource type="Script" uid="uid://d2dqbx3qwc44c" path="res://Assets/Scenes/Menus/settingsMenu.gd" id="1_hy4pc"]
[ext_resource type="Theme" uid="uid://nrk1all2j1ku" path="res://Assets/Themes/pauseMenuTheme.tres" id="1_k0bom"]
[ext_resource type="Theme" uid="uid://bxn7g65qx5rk1" path="res://Assets/Themes/MenuTheme.tres" id="1_w4n8r"]
[ext_resource type="FontFile" uid="uid://c8s6bb0hhh008" path="res://Assets/Fonts/nexa-rust/NexaRustHandmade-Extended.otf" id="2_iuic6"]
[ext_resource type="AudioStream" uid="uid://b2mapwkxsf07o" path="res://Assets/Scenes/Audio/ui_click.wav" id="5_vugds"]
[ext_resource type="AudioStream" uid="uid://ihy0nx7pwnrx" path="res://Assets/Scenes/Audio/ui_Hover.wav" id="6_c25yr"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hy4pc")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
visibility_layer = 512
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_k0bom")
theme_override_constants/separation = 10
alignment = 1

[node name="pauseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource("1_w4n8r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.19607843)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 18
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("2_iuic6")
theme_override_font_sizes/font_size = 80
text = "Paused"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 36

[node name="continueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="lastcheckpointButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Last Checkpoint"

[node name="restartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="settingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="quitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "quit
"

[node name="UIClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vugds")
volume_db = 14.136

[node name="UIHoverPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_c25yr")
volume_db = 4.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/continueButton" to="." method="_on_continue_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/continueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/lastcheckpointButton" to="." method="_on_lastcheckpoint_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/settingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
